vswitch: add vlan support
1. add vlan adaptor iface
2. remove AbstractEthernetPacket
3. fix bugs in EthernetPacket and umem byte array
4. make full copy of packet when running broadcast and flooding